# rfone_host

./: .gitignore  CMakeLists.txt  README.md  com.hydrasdr.hydrasdr-tools.metainfo.xml
.github/workflows/: build.yml
cmake/modules/: FindLIBHYDRASDR.cmake  FindLIBUSB.cmake
debian/: changelog  control  copyright  rules
hydrasdr-tools/: 51-hydrasdr.rules  CMakeLists.txt  README.md  hydrasdr_calibration_procedure.md  hydrasdr_tools_readme.md  hydrasdr_troubleshooting.md
hydrasdr-tools/src/: CMakeLists.txt  hydrasdr_calibrate.c  hydrasdr_gpio.c  hydrasdr_gpiodir.c  hydrasdr_info.c  hydrasdr_lib_version.c  hydrasdr_r82x.c  hydrasdr_reset.c  hydrasdr_rx.c  hydrasdr_set_rf_port.c  hydrasdr_si5351c.c  hydrasdr_spiflash.c
libhydrasdr/: CMakeLists.txt  HydraSDRConfig.cmake  LICENSE.md  README.md  libhydrasdr.pc.in
libhydrasdr/src/: CMakeLists.txt  hydrasdr.c  hydrasdr.h
libhydrasdr/src/win32/: hydrasdr.rc
libhydrasdr/vc/: getopt_2019.vcxproj  hydrasdr_2019.sln  hydrasdr_2019.vcxproj  hydrasdr_calibrate_2019.vcxproj  hydrasdr_gpio_2019.vcxproj  hydrasdr_gpiodir_2019.vcxproj  hydrasdr_info_2019.vcxproj  hydrasdr_lib_version_2019.vcxproj  hydrasdr_r82x_2019.vcxproj  hydrasdr_reset_2019.vcxproj  hydrasdr_rx_2019.vcxproj  hydrasdr_set_rf_port_2019.vcxproj  hydrasdr_si5351c_2019.vcxproj  hydrasdr_spiflash_2019.vcxproj
